# TaggerNews

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
benchmarking/: locustfile.py  run_load_test.sh
database/: init.sql
doc/: deployment.md
migrations/: env.py
migrations/versions/: 08e4a9c567df_use_timezone_aware_timestamps.py  24d7020b2ea6_add_tags_table.py  5bc07c7e0bed_add_tag_hierarchy.py  7048ce52069b_add_processing_status_fields.py  8a2f3c4d5e6f_add_tag_category.py  9b3d4e5f6a7c_add_agent_system.py  a1b2c3d4e5f6_add_scraper_state.py  f5bfd41656d2_simplify_tags_flat.py
scripts/: purge_db.py
src/taggernews/: __init__.py  config.py  main.py
src/taggernews/agents/: __init__.py  base.py  orchestrator.py  tag_proposer.py  tag_reorganizer.py  taxonomy_analyzer.py
src/taggernews/api/: dependencies.py  dev.py
src/taggernews/domain/: __init__.py  story.py  summary.py
static/css/: styles.css
templates/: base.html  index.html
templates/partials/: advanced_filter.html  date_filter.html  story_card.html  story_list.html  tag_sidebar.html
tests/: conftest.py
tests/unit/: test_agent_edge_cases.py  test_config_edge_cases.py  test_csv_logger.py  test_hn_client_edge_cases.py  test_orchestrator.py  test_scraper_fixes.py  test_scraper_service_edge_cases.py  test_security.py  test_story.py  test_story_edge_cases.py  test_story_repo.py  test_summarizer_edge_cases.py  test_tag_system_edge_cases.py  test_tag_taxonomy.py  test_views.py  test_views_edge_cases.py
(+18 files in other folders)
